feat: Added first name and last name to User